<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:background="@color/colorBlack"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:fontFamily="@font/montserrat_extrabold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:textColorHint="@android:color/white"
            android:background="@color/colorGrey"
            android:layout_marginTop="20dp"
            android:layout_width="@dimen/etWidth"
            android:layout_height="@dimen/etHeight" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:background="@color/colorGrey"
            android:layout_marginTop="10dp"
            android:layout_width="@dimen/etWidth"
            android:layout_height="@dimen/etHeight" />

        <Button
            android:text="@string/login"
            android:background="@color/colorBlueSoft"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnheight" />

    </LinearLayout>
</RelativeLayout>