<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBgCard"
    tools:context=".PasswordCheckActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:text="@string/masukkan_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="10sp"
        android:textColor="@color/colorBlack"
        android:text="@string/masukkan_password_2"/>

    <EditText
        android:id="@+id/et_masukPassword_passwordCheck"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_edit_text"
        android:hint="masukkan password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:visibility="visible" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/lupa_password"/>

        <TextView
            android:id="@+id/tv_resetPassword_passwordCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset password"
            android:textColor="@color/colorMerah"
            android:textSize="10sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit_cairkanDompet"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="40dp"
        android:text="submit"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:background="@drawable/background_button"/>

</LinearLayout>