<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:background="@drawable/background_list_dompet"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tanggal_dompetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginLeft="10dp"
                android:text="04/03/2019" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_namaStatus_dompetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Pencairan saldo" />

                <TextView
                    android:id="@+id/tv_status_dompetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Proses Pengiriman"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_dropDown_dompetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_expand_more"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:background="@drawable/background_list_dompet"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/bank_tujuan"/>

                <TextView
                    android:id="@+id/tv_namaBank_dompetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mandiri"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat_regular"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/no_rek"/>

                <TextView
                    android:id="@+id/tv_noRek_dompetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9000012395192"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat_regular"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/atas_nama"/>

                <TextView
                    android:id="@+id/tv_atasNama_dompetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fachril Zulfidar"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat_regular"/>
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>